--- a/PlusArt/app/src/main/res/layout/activity_camera.xml
+++ b/PlusArt/app/src/main/res/layout/activity_camera.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,4 +7,4 @@
 
     <include layout="@layout/content_camera" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
