--- a/PlusArt/app/src/main/res/layout/content_camera.xml
+++ b/PlusArt/app/src/main/res/layout/content_camera.xml
@@ -14,4 +14,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="13dp"
+        android:onClick="scanQRCode"
+        android:text="Escanear QR" />
 </RelativeLayout>
