--- a/PlusArt/app/src/main/res/layout/activity_main.xml
+++ b/PlusArt/app/src/main/res/layout/activity_main.xml
@@ -3,47 +3,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.plusart.yus.plusart.MainActivity">
+    tools:context="com.plusart.yus.plusart.MainActivity"
+    android:background="@drawable/gradient">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/QRbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:onClick="startCameraActivity"
-        android:text="CamaraQR"
+        android:text="@string/QRButtonName"
         tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="230dp" />
+        tools:layout_editor_absoluteY="230dp"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/OPCButton"
+        android:layout_alignStart="@+id/OPCButton"
+        android:layout_alignRight="@+id/OPCButton"
+        android:layout_alignEnd="@+id/OPCButton" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tituloTextView"
+        android:textSize="50px"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:text="Bievendio a PlusArt: " />
+        android:text="@string/TituloMainActivity" />
 
     <Button
         android:id="@+id/button_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:text="Información" />
+        android:text="Información"
+        android:onClick="startInfoActivity"
+        android:layout_alignTop="@+id/OPCButton"
+        android:layout_marginTop="69dp"
+        android:layout_alignLeft="@+id/OPCButton"
+        android:layout_alignStart="@+id/OPCButton"
+        android:layout_alignRight="@+id/OPCButton"
+        android:layout_alignEnd="@+id/OPCButton" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/OPCButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp"
         android:onClick="startOpenCVActivity"
-        android:text="OpenCV Camara" />
+        android:text="@string/OPCButtonName"
+        android:layout_marginTop="22dp"
+        android:layout_below="@+id/QRbutton"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/DescripcionTextView"
+        android:textColor="@color/white"
+        android:layout_width="700px"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text="@string/DescripcionMainActivity"
+        android:layout_below="@+id/tituloTextView"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
